# wintermute

./: .gitignore  .prettierignore  404.html  DEVELOPMENT.md  README.md  cspell.json  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  out.docx  pyproject.toml  sitemap.xml
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/workflows/: ci.yml  deploy-docs.yml  docs.yml
SUMMARY/: index.html
TestPlans/: TP-AWS-IAM-ROLE-001.json  TP-AWS-OMNI-001.json  TP-AWS-OMNI-FULL.json  TP-AWS-RED-MEGA-001.json  TP-AWS-RED-MEGA-002.json  TP-AWS-RED-MEGA-003.json  TP-HW-BLACKBOX-001.json
artifacts/: command_catalog.json
docs/: SUMMARY.md  index.md
docs/manual/: index.md
docs/tutorials/: 01_neural_routing.ipynb  02_bugzilla_tracking.ipynb  03_docx_generation.ipynb  index.md
examples/: 01-Basic-Examples.ipynb  02-Operations-and-Storage.ipynb  03-Hardware-Security-Testing.ipynb  04-AI-Enrichment-and-Tools.ipynb  05-RAG-Knowledge-Bases.ipynb  06-Qdrant-RAG-Integration.ipynb
examples/knowledge_bases/qdrant_example/: rag_config.json
examples/knowledge_bases/tiny_hardware_test/: rag_config.json
examples/knowledge_bases/tiny_hardware_test/storage_db/: default__vector_store.json  docstore.json  index_store.json
manual/: index.html
reference/SUMMARY/: index.html
reference/WintermuteConsole/: index.html
reference/WintermuteMCP/: index.html
reference/ai/: index.html
reference/ai/bootstrap/: index.html
reference/ai/json_types/: index.html
reference/ai/provider/: index.html
reference/ai/providers/: index.html
reference/ai/providers/bedrock_provider/: index.html
reference/ai/providers/groq_provider/: index.html
reference/ai/reporting/: index.html
reference/ai/retry/: index.html
reference/ai/tools_runtime/: index.html
reference/ai/types/: index.html
reference/ai/use/: index.html
reference/ai/utils/: index.html
reference/backends/: index.html
reference/backends/bugzilla/: index.html
reference/backends/depthcharge/: index.html
reference/backends/docx_reports/: index.html
reference/backends/dynamodb/: index.html
reference/backends/json_storage/: index.html
reference/basemodels/: index.html
reference/cartridges/: index.html
reference/cartridges/tpm20/: index.html
reference/cloud/: index.html
reference/cloud/aws/: index.html
reference/core/: index.html
reference/findings/: index.html
reference/hardware/: index.html
reference/integrations/: index.html
reference/integrations/mcp_runtime/: index.html
reference/integrations/surgeon/: index.html
reference/peripherals/: index.html
reference/reports/: index.html
reference/storage/: index.html
reference/tickets/: index.html
reference/utils/: index.html
reference/utils/coverage/: index.html
reference/utils/findings/: index.html
reference/utils/logging/: index.html
reference/utils/parsers/: index.html
search/: search_index.json
templates/: report_main.docx  report_test_run.docx  report_vuln.docx
tests/: test_ai_reporting.py  test_ai_retry.py  test_ai_tools_runtime.py  test_ai_utils.py  test_backends_dynamodb.py  test_backends_json_storage.py  test_basemodels.py  test_bedrock_provider.py  test_bugzilla_backend.py  test_burp_parser_parse.py  test_burp_parser_xlsx.py  test_console_commands.py  test_console_coverage_boost.py  test_console_extra.py  test_console_path_resolution.py  test_core.py  test_depthcharge.py  test_docx_tpl_per_vuln_backend.py  test_groq_provider.py  test_hardware.py  test_huggingface_provider.py  test_mcp_runtime.py  test_openai_provider.py  test_peripheral.py  test_peripherals.py  test_peripherals_models.py  test_rag_config.py  test_rag_provider.py  test_report_backend.py  test_ssh_session.py  test_tickets.py  test_tool_factory.py  test_tpm20.py  test_tpm_helpers.py  test_utils_coverage.py  test_utils_findings.py  test_version.py  test_vulnerabilities_propagation.py
tests/cartridges/: test_findings.py
tutorials/: index.html
tutorials/01_neural_routing/: index.html
tutorials/02_bugzilla_tracking/: 02_bugzilla_tracking.ipynb  index.html
tutorials/03_docx_generation/: index.html
wintermute/: WintermuteConsole.py  WintermuteMCP.py  WintermuteREPL.py  __init__.py  basemodels.py  core.py  findings.py  hardware.py  peripherals.py  reports.py  storage.py  tickets.py
wintermute/ai/: bootstrap.py  json_types.py  provider.py  reporting.py  retry.py  tools_runtime.py  types.py  use.py  utils.py
wintermute/ai/providers/: bedrock_provider.py  groq_provider.py  huggingface_provider.py  openai_provider.py  rag_provider.py
wintermute/ai/utils/: __init__.py  aws_rag.py  hardware.py  ssh_exec.py  tool_factory.py
wintermute/backends/: __init__.py  bugzilla.py  depthcharge.py  docx_reports.py  dynamodb.py  json_storage.py
wintermute/cartridges/: tpm20.py
wintermute/cloud/: aws.py
wintermute/integrations/: mcp_runtime.py
wintermute/integrations/surgeon/: __init__.py  backend.py  server.py
wintermute/utils/: coverage.py  findings.py  logging.py  parsers.py
(+9 files in other folders)
