[build-system]
backend = "hatchling"
requires = ["hatchling>=1.26.3,<2"]

[project]
name = "wintermute"
authors = [{name = "Enrique Sanchez"}]
classifiers = ["Programming Language :: Python :: 3.11",
              "Programming Language :: Python :: 3.12",
              "Programming Language :: Python :: 3.13"]
dependencies = ["ipaddress",
                "tinydb",
                "pyserial",
                "cmd2",
                "argparse",
                "importlib",
                "typing",
                "logging",
                "datetime",
                "bs4",
                "xlsxwriter",
                "lxml",
                "types-requests",
                "requests",
                "docxtpl",
                "docxcompose",
                "depthcharge>=0.6.0",
                "boto3",
                "boto3-stubs",
                "openai",
                "groq",
                "mcp",
                "asyncio",
                "pytest-asyncio",
                "setuptools"]
description = "Hardware security hacking and auditing framework"
dynamic = "version"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4"

[project.optional-dependencies]
checks = ["mypy==1.15.0", "ruff>=0.11,<0.12"]
docs = ["mkdocs-material>=9,<10"]
tests = ["coverage[toml]>=7,<8",
         "httpx>=0.23,<1",
         "pytest>=8.1.1,<9",
         "pytest-mock>=3,<4"]

[project.scripts]
wintermute = "wintermute"

[tool.coverage.report]
exclude_lines = [...]
fail_under = 70
show_missing = true

[tool.coverage.run]
command_line = [...]
source = [...]

[tool.hatch.build.targets.sdist]
...

[tool.hatch.build.targets.wheel]
...

[tool.hatch.envs.ci]
dev-mode = true
features = ["checks", "tests"]
path = ".venv"
scripts = ["check"]

[tool.hatch.envs.default]
dev-mode = true
features = ["checks", "docs", "tests"]
path = ".venv"
scripts = ["check", "format"]
